# Holonomic-Robot-Swarm-Agent

./: Engine Speed Controller  Placa_Controle_Velocidade.sch  README.md
Engine Speed Controller Design/: Controlador de Velocidade Msc Henrick 2020.dbl  Controlador de Velocidade Msc Henrick 2020.rar  Gráficos de Sintonia Controlador de Velocidade.xlsx  PI_Speed_Controller_PIC.c  Speed_Controll_PCB.brd
Stl Files for 3d Printing/: Acopladores Motor Roda.stl  Chassi Camera.stl  Chassi Motores.stl  Chassis to hold motors.stl  Motor Fastener.stl  Motor-Wheel coupler.stl  Travas Motores.stl
triangle_description/: CMakeLists.txt  README.md  package.xml
triangle_description/def/: rim.urdf.xacro  roller.urdf.xacro  triangle.xacro
triangle_description/launch/: triangle_description_model.launch
triangle_description/mesh/: base.stl
triangle_description/rviz/: squarbo_description_model.rviz  triangle_description_model.rviz
